自己紹介内容を追記

--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
 </head>
 <body>
 <!-- ここに内容を書くよ -->
+		<h1>基礎情報</h1>
+		
+		<ul>
+			<li>名前:鄭韓日</li>
+			<li>誕生日:5月27日</li>
+			<li>血液型:AB型</li>
+		</ul>
 </body>
 </html>
