経歴を追記

--- a/index.html
+++ b/index.html
@@ -35,5 +35,12 @@
 		<ul>
 			<li>ゴキブリ</li>
 		</ul>
+		<h2>経歴</h2>
+		<ul>
+			<li>幼稚園:ジョンウプ幼稚園</li>
+			<li>小学校:ジョンウプ東小学校</li>
+			<li>中学校:ジョンウプ中学校</li>
+		</ul>
+		
 </body>
 </html>
