--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
 			<li>小学校:ジョンウプ東小学校</li>
 			<li>中学校:ジョンウプ中学校</li>
 		</ul>
-		
+		<h2>経歴</h2>
+		<ul>
+			<li>幼稚園</li>
+			<ul>
+				<li>幼稚園の先生が好きだったらしい</li>
+			</ul>
+		</ul>
 </body>
 </html>
