経歴の詳細をさらに追記

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 			<li>幼稚園:ジョンウプ幼稚園</li>
 			<li>小学校:ジョンウプ東小学校</li>
 			<li>中学校:ジョンウプ中学校</li>
+			<li>高校:ホームスクール</li>
+			<li>大学:武蔵野大学</li>
 		</ul>
 		<h2>経歴</h2>
 		<ul>
